# DLZ-Calculator

./: .gitignore  README.md  checklist.md
cli/: Cargo.toml  build.rs  help.txt
cli/src/: main.rs  output.rs  repl.rs
kalk/: Cargo.toml
kalk/src/: analysis.rs  calculation_result.rs  integration_testing.rs  interpreter.rs  lexer.rs  numerical.rs  parser.rs
kalk/src/kalk_value/: mod.rs
kalk/src/prelude/: mod.rs
web/public/: index.html
