[package]
authors = ["PaddiM8"]
build = "build.rs"
categories = ["mathematics", "command-line-utilities"]
description = "A calculator that supports user-defined functions, variables and units, and can handle fairly ambiguous syntax."
edition = "2018"
keywords = ["math", "calculator", "cli", "command-line"]
license = "MIT"
name = "dlz-calculator"
readme = "../README.md"
repository = ""
version = "1.0.0"

[dependencies]
ansi_term = "0.12.1"
kalk = { path = "../kalk", version = "^3.2.3" }
lazy_static = "1.4.0"
regex = "1"
rustyline = "7.1.0"
seahorse = "1.1.1"
atty = "0.2.14"
dirs = "3.0.2"

[features]
default = []
# Link against system GMP/MPFR instead of building them from source.
use-system-libs = ["kalk/use-system-libs"]

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[package.metadata.bundle]
icon = ["../res/icon*"]
identifier = "com.dlz.calculator"
name = "dlz-calculator"
short_description = "A calculator that supports user-defined functions, variables and units, and can handle fairly ambiguous syntax."

[package.metadata.bundle.bin.dlz-calculator]
name = "dlz-calculator"
